<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoReviewer</string>
    <string name="action_settings">Settings</string>
    <string name="auto_reviewer">AutoReviewer</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="alpha">Alpha Values Per Channel:</string>
    <string name="beta">Beta Values Per Channel:</string>
    <string name="theta">Theta Values Per Channel:</string>
    <string name="delta">Delta Values Per Channel:</string>
    <string name="init_val">0.0</string>
    <string name="start_time">StartTime</string>
    <string name="end_time">EndTime</string>
    <string name="title_activity_draw_graph">DrawGraphActivity</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">Not Connected</string>
    <string name="title_activity_muse_connect">MuseConnect</string>

</resources>
