<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cmu.lti.autoreviewer.autoreviewer.MuseConnect"
    android:background="@drawable/background">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView14"
            android:textColor="#000000"
            android:singleLine="true"
            android:layout_gravity="center"
            android:textSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/refresh"
            android:id="@+id/connect_refresh"
            android:background="#55a955"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/connect_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/connect_connect"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/connect"
            android:background="#55a955"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="15sp"
            android:text="@string/status"
            android:textColor="#000000"
            android:gravity="left|center"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/connect_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/undefined"
            android:textColor="#000000"
            android:gravity="left|center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=
"1. Press Refresh Button \n
2. Press Connect Button \n
3. After Status is Connected, press Next Button
            "
            android:id="@+id/textView13"
            android:layout_marginTop="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:id="@+id/connect_next"
                android:layout_weight="1"
                android:layout_gravity="bottom" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
